# Mitski-Lyrics-Over-Time

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mitski_lyrics.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/lexicons/: valence_afinn.txt
data/metadata/: albums.json
data/processed/: mitski_lyrics_clean.json
data/raw/: mitski_lyrics.json
report/: mitski_lyrics_over_time.qmd
scraper/: .gitignore  README(scraper).md  artist_page_debug.html  scraper.py
scripts/: build_dataset.py  clean_lyrics.py  make_3d.py  make_figures.py
src/: mitski_cli.py
src/mitski_analysis/: __init__.py  data.py  figures.py  figures3d.py  stats.py  text.py  theme.py
tests/: test_data.py  test_figures.py  test_figures3d.py  test_stats.py  test_text.py
